force-app/main/default/objects/Activity/fields/called_number__c.field-meta.xml
<CustomField>
    <fullName>called_number__c</fullName>
    <label>Contivio Called Number</label>
    <type>Phone</type>
</CustomField>