force-app/main/default/objects/Activity/fields/caller_number__c.field-meta.xml
<CustomField>
    <fullName>caller_number__c</fullName>
    <label>Contivio Contact Number</label>
    <type>Phone</type>
</CustomField>