force-app/main/default/objects/Activity/fields/Catalog_Information__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Information__c</fullName>
    <label>Catalog Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>