force-app/main/default/objects/Activity/fields/Catalog_Mailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Mailed_Date__c</fullName>
    <label>Catalog Mailed Date</label>
    <type>Date</type>
</CustomField>