force-app/main/default/objects/Activity/fields/contivio_call_direction__c.field-meta.xml
<CustomField>
    <fullName>contivio_call_direction__c</fullName>
    <label>Contivio Call Direction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>