force-app/main/default/objects/Activity/fields/contivio_call_id__c.field-meta.xml
<CustomField>
    <fullName>contivio_call_id__c</fullName>
    <externalId>true</externalId>
    <label>Contivio Call ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>