force-app/main/default/objects/Activity/fields/contivio_contact_result__c.field-meta.xml
<CustomField>
    <fullName>contivio_contact_result__c</fullName>
    <label>Contivio Contact Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>