force-app/main/default/objects/Activity/fields/Date_PO_Placed__c.field-meta.xml
<CustomField>
    <fullName>Date_PO_Placed__c</fullName>
    <label>Date PO Placed</label>
    <type>Date</type>
</CustomField>