force-app/main/default/objects/Activity/fields/disposition__c.field-meta.xml
<CustomField>
    <fullName>disposition__c</fullName>
    <label>Contivio Disposition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>