force-app/main/default/objects/Activity/fields/Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>Offer_Code__c</fullName>
    <label>Offer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>