force-app/main/default/objects/Activity/fields/queue__c.field-meta.xml
<CustomField>
    <fullName>queue__c</fullName>
    <label>Contivio Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>