force-app/main/default/objects/Activity/fields/recording__c.field-meta.xml
<CustomField>
    <fullName>recording__c</fullName>
    <label>Contivio Recording</label>
    <type>Url</type>
</CustomField>