force-app/main/default/objects/Activity/fields/Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Result_Code__c</fullName>
    <label>Result Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Names__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed with Contact</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Inbound - Customer Returned Call</fullName>
            </value>
            <value>
                <fullName>No Contact Made</fullName>
            </value>
            <value>
                <fullName>Approved Regular Contact Email Sent</fullName>
            </value>
            <value>
                <fullName>Vendor confirmed</fullName>
            </value>
            <value>
                <fullName>Vendor cannot provide</fullName>
            </value>
            <value>
                <fullName>PO Placed</fullName>
            </value>
            <value>
                <fullName>PO Not Placed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Email received with information</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined or Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer Accepted</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>