force-app/main/default/objects/Activity/fields/Task_Names__c.field-meta.xml
<CustomField>
    <fullName>Task_Names__c</fullName>
    <label>Task Names</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect Near $</fullName>
            </value>
            <value>
                <fullName>Platinum Prospect Near $</fullName>
            </value>
            <value>
                <fullName>New Prospect Contact</fullName>
            </value>
            <value>
                <fullName>Prospect Follow-Up Contact</fullName>
            </value>
            <value>
                <fullName>New Platinum Introduction</fullName>
            </value>
            <value>
                <fullName>Regular Customer Contact</fullName>
            </value>
            <value>
                <fullName>PM Vendor Confirmation Details</fullName>
            </value>
            <value>
                <fullName>PM Place Order with Vendor</fullName>
            </value>
            <value>
                <fullName>New Discount Level</fullName>
            </value>
            <value>
                <fullName>Special Order Review by Platinum Team</fullName>
            </value>
            <value>
                <fullName>Special Order Review by CS Team</fullName>
            </value>
            <value>
                <fullName>GSK Order Review by CS Team</fullName>
            </value>
            <value>
                <fullName>Product Availability Alert</fullName>
            </value>
            <value>
                <fullName>Follow up the Quote Estimation</fullName>
            </value>
            <value>
                <fullName>Upgraded from Non-Platinum To Platinum</fullName>
            </value>
            <value>
                <fullName>84 day test task</fullName>
            </value>
            <value>
                <fullName>Special Price Approval Request</fullName>
            </value>
            <value>
                <fullName>Customer Reached 1000$</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>