force-app/main/default/objects/Activity/listViews/rstk__MyActivities.listView-meta.xml
<ListView>
    <fullName>rstk__MyActivities</fullName>
    <filterScope>Mine</filterScope>
    <label>My Activities</label>
</ListView>